			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04d: *********************************

IMP: (1/17/06, DN) Added Job.startJobOnMyResult method to start a new Job on result snapshot of current Job.
    Compaction tools uses it to launch a chain of Jobs.
    Job.terminateOk and Job.terminateFail instead of Job.terminateIt .

IMP: (1/16/06, SMR) Further reorganization for client/server split:
     More Job classes recoded.
     Removed use of "Name" object for tracking highlighting, replaced with Variable.Key.

IMP: (1/12/06, DN) Serialization/deserialization of Job objects. It is tested in "-debug" mode.

IMP: (1/12/06, SMR) Further reorganization for client/server split:
     Added null constructor to every Job class.
     Finished reorganazation of package tool.user.

IMP: (1/12/06, GVG) Reorganizing DRC rules stored so they belong to the foundries and
     easily replaced by imported data. New class Foundry.

IMP: (1/11/06, DN) Added method Job.terminateIt. This method will be called on client side
     after termination of Job.doIt on server side.

IMP: (1/10/06, SMR) Reorganized "CircuitChanges.java" into client and server parts.
     Created "CircuitChangeJobs.java" with server parts.
     Created com.sun.tool.JobException (no contents) and subclass CantEditException.

IMP: (1/10/06, DN) Cell bounds are stored in immutable class ERectangle and are shared with Snapshot.

IMP: (1/9/06, GVG) Reorganizing and cleaning TechPalette.
     New bits for special transistors (H/L VT, native, etc).

IMP: (1/9/06, SMR) Sweeps in the waveform window now show inclusion and exclusion
     more distinctly (Bug #782).

IMP: (1/9/06, SMR) Waveform windows can now be exported as PostScript (Bug #564).

BUG: (1/9/06, SMR) Annular ring construction crashes.
FIX: In AnnularRing.MakeAnnulus.doIt() do not try to change EPoint coordinates.
